# excel_worker

./: .flake8  .gitignore  __main__.py  balance.json  pyproject.toml  start.bat  style.css
Dagenergy/Аналитика/Отчеты/: Отчет ГП.xlsx
Dagenergy/Потребители/: ~$Реестр статических данных.xlsx  Журнал изменений.xlsx  Реестр статических данных.xlsx
Dagenergy/Сводный баланс/2023/УПП/: Сводная ведомость Коммерческого потребления.xlsx
Dagenergy/Сводный баланс/2023/УПП/Июнь/Дагестанские Огни/: РВ Дагестанские Огни Коммерческого потребления Июль 2023.xlsx
Dagenergy/Сводный баланс/2023/УПП/Июнь/Кизилюрт/: РВ Кизилюрт Коммерческого потребления Июль 2023.xlsx
Dagenergy/Сводный баланс/2023/УПП/Июнь/Кизляр/: РВ Кизляр Коммерческого потребления Июль 2023.xlsx
Dagenergy/Сводный баланс/2023/УПП/Июнь/Махачкала/: РВ Махачкала Коммерческого потребления Июль 2023.xlsx
Dagenergy/Сводный баланс/2023/УПП/Июнь/Унцукуль/: РВ Унцукуль Коммерческого потребления Июль 2023.xlsx
components/: main.py  test.py  thread.py
components/rightside/: buttons.py  ui.py
components/sidebar/: __init__.py  style.py
interface/: main.py
logic/: const.py  consumers.py  start_bicu.py
logic/analytics/: balance.py
logic/comparer/: __init__.py  average.py  balance.py  bicu.py  calculation.py  calculation_fl.py  report_gp.py  svod_comparer.py
logic/dirs_worker/: __init__.py  tree_dir.py
logic/file_worker/: __init__.py  log.py  log_changes.py
logic/formater/: __init__.py  base.py
template/: log.xlsx  rv.xlsx  svod.xlsx
(+5 files in other folders)
